// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when window.connect is defined Style should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  width: var(--ac-widget-send-button-size,32px);
  height: var(--ac-widget-send-button-size,32px);
  border-radius: 50%;
  cursor: default;
  -webkit-transition: background-color 0.15s ease;
  transition: background-color 0.15s ease;
  background-color: var(--ac-widget-send-button-bg,#EDEDED);
}

.c15>svg {
  width: var(--ac-widget-send-button-icon-size,16px);
  height: var(--ac-widget-send-button-icon-size,16px);
  fill: var(--ac-widget-send-button-icon-color,#FFFFFF);
}

.c15>img {
  width: var(--ac-widget-send-button-icon-size,16px);
  height: var(--ac-widget-send-button-icon-size,16px);
  object-fit: contain;
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: var(--ac-widget-disclaimer-gap,10px);
  padding: var(--ac-widget-disclaimer-padding,16px);
  border-top: var(--ac-widget-disclaimer-border-top,1px solid #CCCCCC);
  background: var(--ac-widget-disclaimer-background,#F7F7F7);
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
}

.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 svg {
  width: var(--ac-widget-disclaimer-icon-size,20px);
  height: var(--ac-widget-disclaimer-icon-size,20px);
}

.c3 {
  min-width: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c6 {
  margin: 0;
  font-size: 10px;
  line-height: 16px;
  font-weight: normal;
  padding: 0;
  color: var(--ac-widget-disclaimer-text-color,#666666);
  overflow-wrap: break-word;
}

.c7 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: var(--ac-widget-disclaimer-link-color,#1067BA);
}

.c4 {
  font-size: 10px;
  line-height: 16px;
  font-weight: normal;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 2px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background: none;
  border: none;
  cursor: pointer;
  color: var(--ac-widget-disclaimer-link-color,#1067BA);
  font-family: inherit;
  font-size: 9px;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration-style: solid;
  text-decoration-style: solid;
  white-space: nowrap;
  float: right;
  margin-left: 8px;
}

.c5 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 8px;
  height: 6px;
  fill: var(--ac-widget-disclaimer-link-color,#1067BA);
}

.c0 {
  margin: 0;
  padding: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  background: var(--ac-widget-composer-background,#FFFFFF);
  border: var(--ac-widget-composer-border,1px solid #CCCCCC);
  border-radius: var(--ac-widget-composer-border-radius,24px);
  margin: var(--ac-widget-composer-margin,8px 16px 16px);
}

.c9 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  position: absolute;
  top: 50%;
  right: var(--ac-widget-composer-send-button-offset,10px);
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--ac-widget-composer-icons-gap,6px);
  z-index: 2;
}

.c12 {
  cursor: pointer;
  height: auto;
  vertical-align: top;
}

.c12 button {
  height: 100%;
  width: 100%;
}

.c12 label {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  font-size: 0;
  height: 100%;
  margin-bottom: 0;
}

.c12 input {
  display: none;
}

.c13 {
  background-color: transparent;
  border: 1px solid transparent;
  position: relative;
  padding: 0;
  margin: 0;
}

.c10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
  word-break: break-word;
  font-family: inherit;
  padding: 10px;
  padding-left: 14px;
  padding-right: var(--ac-widget-composer-icons-clearance,84px);
  background: transparent;
  line-height: 1.5rem;
  overflow-y: auto;
  min-height: 39px;
  z-index: 2;
  resize: none;
  font-size: var(--ac-widget-composer-fontsize,var(--ac-widget-global-fontsize,16px));
  border: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

.c10::-webkit-scrollbar {
  display: none;
}

.c10::-webkit-input-placeholder {
  color: #666666;
}

.c10::-moz-placeholder {
  color: #666666;
}

.c10:-ms-input-placeholder {
  color: #666666;
}

.c10::placeholder {
  color: #666666;
}

.c10:focus::-webkit-input-placeholder {
  color: transparent;
}

.c10:focus::-moz-placeholder {
  color: transparent;
}

.c10:focus:-ms-input-placeholder {
  color: transparent;
}

.c10:focus::placeholder {
  color: transparent;
}

.c10:disabled {
  cursor: not-allowed;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0;
}

.c14 svg {
  width: 24px;
  height: 24px;
}

.c16 {
  text-align: center;
  color: var(--ac-widget-composer-disclaimer-color,#666666);
  font-size: var(--ac-widget-composer-disclaimer-fontsize,12px);
  margin: 0 16px 8px;
}

@media (max-width:360px) {
  .c1 {
    padding: var(--ac-widget-disclaimer-padding-small,12px);
  }
}

@media (max-width:360px) {
  .c8 {
    margin: var(--ac-widget-composer-margin-small,8px 10px 10px);
  }
}

<div>
      <div
        class="c0 composer"
      >
        <div
          class="c1"
          data-testid="customer-chat-disclaimer"
        >
          <div
            class="c2"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="20"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 0.833344L2.5 4.16668V9.16668C2.5 13.7917 5.7 18.1167 10 19.1667C14.3 18.1167 17.5 13.7917 17.5 9.16668V4.16668L10 0.833344ZM15.8333 9.16668C15.8333 10.7083 15.4083 12.2083 14.6833 13.5083L13.475 12.3C14.55 10.6833 14.3667 8.48334 12.9417 7.05834C11.3167 5.43334 8.675 5.43334 7.05 7.05834C5.425 8.68334 5.425 11.325 7.05 12.95C8.475 14.375 10.675 14.55 12.2917 13.4833L13.725 14.9167C12.7333 16.1 11.45 17.0083 10 17.45C6.65 16.4083 4.16667 12.9333 4.16667 9.16668V5.25001L10 2.65834L15.8333 5.25001V9.16668ZM10 12.5C8.61667 12.5 7.5 11.3833 7.5 10C7.5 8.61668 8.61667 7.50001 10 7.50001C11.3833 7.50001 12.5 8.61668 12.5 10C12.5 11.3833 11.3833 12.5 10 12.5Z"
                fill="#595959"
              />
            </svg>
          </div>
          <div
            class="c3"
          >
            <button
              aria-expanded="true"
              class="c4"
              data-testid="customer-chat-disclaimer-toggle"
              type="button"
            >
              Show less
              <svg
                aria-hidden="true"
                class="c5"
                viewBox="0 0 12 8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 0L0 6L1.41 7.41L6 2.83L10.59 7.41L12 6L6 0Z"
                />
              </svg>
            </button>
            <p
              class="c6"
            >
              This chat may be recorded and shared with our service providers to support your experience. By sending a message, you agree to our 
              <a
                class="c7"
              >
                Privacy Policy
              </a>
               and 
              <a
                class="c7"
              >
                Terms of Use
              </a>
              .
            </p>
          </div>
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <textarea
              aria-label="Type a message"
              class="c10"
              data-testid="customer-chat-text-input"
              maxlength="200"
              placeholder="Type a message"
              spellcheck="true"
              tabindex="0"
            />
            <div
              class="c11"
            >
              <div
                class="c12"
                data-testid="customer-chat-attachment-icon"
                tabindex="0"
              >
                <button
                  aria-label="Attach a file"
                  class="c13"
                >
                  <label
                    for="customer-chat-file-select-12344"
                  >
                    <div
                      class="c14"
                    >
                      <svg
                        fill="none"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          height="14"
                          rx="2.5"
                          stroke="currentColor"
                          stroke-width="1.4"
                          width="16"
                          x="2"
                          y="4"
                        />
                        <circle
                          cx="7"
                          cy="9"
                          fill="currentColor"
                          r="1.3"
                        />
                        <path
                          d="M3.5 15.5 8 11l2.5 2.5L15 9l3.5 5v1a1 1 0 0 1-1 1H4.5a1 1 0 0 1-1-1v-.5Z"
                          fill="currentColor"
                        />
                        <circle
                          cx="18.5"
                          cy="17.5"
                          fill="var(--ac-widget-composer-attach-badge-bg, #232F3E)"
                          r="4.5"
                        />
                        <path
                          d="M18.5 15.7v3.6M16.7 17.5h3.6"
                          stroke="white"
                          stroke-linecap="round"
                          stroke-width="1.4"
                        />
                      </svg>
                    </div>
                    <input
                      accept="text/plain,application/pdf,image/jpeg,image/png,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,text/csv,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,audio/wav,audio/x-wav,audio/vnd.wave,image/jpeg,application/rtf,application/x-rtf,image/heic,video/quicktime,video/mp4,text/richtext,text/rtf,.doc,.docx,.xls,.xlsx,.ppt,.pptx,.txt,.csv,.jfif,.rtf,.heic,.mov,.mp4"
                      aria-label="Attach a file"
                      data-testid="customer-chat-file-select"
                      id="customer-chat-file-select-12344"
                      multiple=""
                      tabindex="-1"
                      type="file"
                    />
                  </label>
                </button>
              </div>
              <div
                aria-label="Send Message"
                class="c15"
                data-testid="customer-chat-send-message-button"
                tabindex="0"
              >
                <svg
                  height="24px"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M4.01 6.03L11.52 9.25L4 8.25L4.01 6.03ZM11.51 14.75L4 17.97V15.75L11.51 14.75ZM2.01 3L2 10L17 12L2 14L2.01 21L23 12L2.01 3Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c16"
        >
          Virtual Assistant is AI and can make mistakes.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-kkGfuU hRQtAN composer"
    >
      <div
        class="sc-bwzfXH hHbIBn"
        data-testid="customer-chat-disclaimer"
      >
        <div
          class="sc-htpNat fsafFp"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 0.833344L2.5 4.16668V9.16668C2.5 13.7917 5.7 18.1167 10 19.1667C14.3 18.1167 17.5 13.7917 17.5 9.16668V4.16668L10 0.833344ZM15.8333 9.16668C15.8333 10.7083 15.4083 12.2083 14.6833 13.5083L13.475 12.3C14.55 10.6833 14.3667 8.48334 12.9417 7.05834C11.3167 5.43334 8.675 5.43334 7.05 7.05834C5.425 8.68334 5.425 11.325 7.05 12.95C8.475 14.375 10.675 14.55 12.2917 13.4833L13.725 14.9167C12.7333 16.1 11.45 17.0083 10 17.45C6.65 16.4083 4.16667 12.9333 4.16667 9.16668V5.25001L10 2.65834L15.8333 5.25001V9.16668ZM10 12.5C8.61667 12.5 7.5 11.3833 7.5 10C7.5 8.61668 8.61667 7.50001 10 7.50001C11.3833 7.50001 12.5 8.61668 12.5 10C12.5 11.3833 11.3833 12.5 10 12.5Z"
              fill="#595959"
            />
          </svg>
        </div>
        <div
          class="sc-bxivhb gbzHpS"
        >
          <button
            aria-expanded="true"
            class="sc-gzVnrw dcwcOS"
            data-testid="customer-chat-disclaimer-toggle"
            type="button"
          >
            Show less
            <svg
              aria-hidden="true"
              class="sc-htoDjs bKoRnx"
              viewBox="0 0 12 8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 0L0 6L1.41 7.41L6 2.83L10.59 7.41L12 6L6 0Z"
              />
            </svg>
          </button>
          <p
            class="sc-EHOje gzPryD"
          >
            This chat may be recorded and shared with our service providers to support your experience. By sending a message, you agree to our 
            <a
              class="sc-bZQynM ftJhAn"
            >
              Privacy Policy
            </a>
             and 
            <a
              class="sc-bZQynM ftJhAn"
            >
              Terms of Use
            </a>
            .
          </p>
        </div>
      </div>
      <div
        class="sc-iAyFgw dAlhdE"
      >
        <div
          class="sc-hSdWYo golqQu"
        >
          <textarea
            aria-label="Type a message"
            class="sc-cMljjf fQLzEC"
            data-testid="customer-chat-text-input"
            maxlength="200"
            placeholder="Type a message"
            spellcheck="true"
            tabindex="0"
          />
          <div
            class="sc-eHgmQL gZbIKa"
          >
            <div
              class="sc-cvbbAY icApEO"
              data-testid="customer-chat-attachment-icon"
              tabindex="0"
            >
              <button
                aria-label="Attach a file"
                class="sc-jWBwVP kaGVxr"
              >
                <label
                  for="customer-chat-file-select-12344"
                >
                  <div
                    class="sc-jAaTju dtpwYi"
                  >
                    <svg
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="14"
                        rx="2.5"
                        stroke="currentColor"
                        stroke-width="1.4"
                        width="16"
                        x="2"
                        y="4"
                      />
                      <circle
                        cx="7"
                        cy="9"
                        fill="currentColor"
                        r="1.3"
                      />
                      <path
                        d="M3.5 15.5 8 11l2.5 2.5L15 9l3.5 5v1a1 1 0 0 1-1 1H4.5a1 1 0 0 1-1-1v-.5Z"
                        fill="currentColor"
                      />
                      <circle
                        cx="18.5"
                        cy="17.5"
                        fill="var(--ac-widget-composer-attach-badge-bg, #232F3E)"
                        r="4.5"
                      />
                      <path
                        d="M18.5 15.7v3.6M16.7 17.5h3.6"
                        stroke="white"
                        stroke-linecap="round"
                        stroke-width="1.4"
                      />
                    </svg>
                  </div>
                  <input
                    accept="text/plain,application/pdf,image/jpeg,image/png,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,text/csv,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,audio/wav,audio/x-wav,audio/vnd.wave,image/jpeg,application/rtf,application/x-rtf,image/heic,video/quicktime,video/mp4,text/richtext,text/rtf,.doc,.docx,.xls,.xlsx,.ppt,.pptx,.txt,.csv,.jfif,.rtf,.heic,.mov,.mp4"
                    aria-label="Attach a file"
                    data-testid="customer-chat-file-select"
                    id="customer-chat-file-select-12344"
                    multiple=""
                    tabindex="-1"
                    type="file"
                  />
                </label>
              </button>
            </div>
            <div
              aria-label="Send Message"
              class="sc-bdVaJa iOYBrR"
              data-testid="customer-chat-send-message-button"
              tabindex="0"
            >
              <svg
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M4.01 6.03L11.52 9.25L4 8.25L4.01 6.03ZM11.51 14.75L4 17.97V15.75L11.51 14.75ZM2.01 3L2 10L17 12L2 14L2.01 21L23 12L2.01 3Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-hzDkRC DBcwP"
      >
        Virtual Assistant is AI and can make mistakes.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`when window.connect is not defined Style should match the snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  width: var(--ac-widget-send-button-size,32px);
  height: var(--ac-widget-send-button-size,32px);
  border-radius: 50%;
  cursor: default;
  -webkit-transition: background-color 0.15s ease;
  transition: background-color 0.15s ease;
  background-color: var(--ac-widget-send-button-bg,#EDEDED);
}

.c15>svg {
  width: var(--ac-widget-send-button-icon-size,16px);
  height: var(--ac-widget-send-button-icon-size,16px);
  fill: var(--ac-widget-send-button-icon-color,#FFFFFF);
}

.c15>img {
  width: var(--ac-widget-send-button-icon-size,16px);
  height: var(--ac-widget-send-button-icon-size,16px);
  object-fit: contain;
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: var(--ac-widget-disclaimer-gap,10px);
  padding: var(--ac-widget-disclaimer-padding,16px);
  border-top: var(--ac-widget-disclaimer-border-top,1px solid #CCCCCC);
  background: var(--ac-widget-disclaimer-background,#F7F7F7);
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
}

.c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 svg {
  width: var(--ac-widget-disclaimer-icon-size,20px);
  height: var(--ac-widget-disclaimer-icon-size,20px);
}

.c3 {
  min-width: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c6 {
  margin: 0;
  font-size: 10px;
  line-height: 16px;
  font-weight: normal;
  padding: 0;
  color: var(--ac-widget-disclaimer-text-color,#666666);
  overflow-wrap: break-word;
}

.c7 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: var(--ac-widget-disclaimer-link-color,#1067BA);
}

.c4 {
  font-size: 10px;
  line-height: 16px;
  font-weight: normal;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 2px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background: none;
  border: none;
  cursor: pointer;
  color: var(--ac-widget-disclaimer-link-color,#1067BA);
  font-family: inherit;
  font-size: 9px;
  font-style: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration-style: solid;
  text-decoration-style: solid;
  white-space: nowrap;
  float: right;
  margin-left: 8px;
}

.c5 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 8px;
  height: 6px;
  fill: var(--ac-widget-disclaimer-link-color,#1067BA);
}

.c0 {
  margin: 0;
  padding: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  background: var(--ac-widget-composer-background,#FFFFFF);
  border: var(--ac-widget-composer-border,1px solid #CCCCCC);
  border-radius: var(--ac-widget-composer-border-radius,24px);
  margin: var(--ac-widget-composer-margin,8px 16px 16px);
}

.c9 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  position: absolute;
  top: 50%;
  right: var(--ac-widget-composer-send-button-offset,10px);
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--ac-widget-composer-icons-gap,6px);
  z-index: 2;
}

.c12 {
  cursor: pointer;
  height: auto;
  vertical-align: top;
}

.c12 button {
  height: 100%;
  width: 100%;
}

.c12 label {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  font-size: 0;
  height: 100%;
  margin-bottom: 0;
}

.c12 input {
  display: none;
}

.c13 {
  background-color: transparent;
  border: 1px solid transparent;
  position: relative;
  padding: 0;
  margin: 0;
}

.c10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
  word-break: break-word;
  font-family: inherit;
  padding: 10px;
  padding-left: 14px;
  padding-right: var(--ac-widget-composer-icons-clearance,84px);
  background: transparent;
  line-height: 1.5rem;
  overflow-y: auto;
  min-height: 39px;
  z-index: 2;
  resize: none;
  font-size: var(--ac-widget-composer-fontsize,var(--ac-widget-global-fontsize,16px));
  border: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

.c10::-webkit-scrollbar {
  display: none;
}

.c10::-webkit-input-placeholder {
  color: #666666;
}

.c10::-moz-placeholder {
  color: #666666;
}

.c10:-ms-input-placeholder {
  color: #666666;
}

.c10::placeholder {
  color: #666666;
}

.c10:focus::-webkit-input-placeholder {
  color: transparent;
}

.c10:focus::-moz-placeholder {
  color: transparent;
}

.c10:focus:-ms-input-placeholder {
  color: transparent;
}

.c10:focus::placeholder {
  color: transparent;
}

.c10:disabled {
  cursor: not-allowed;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0;
}

.c14 svg {
  width: 24px;
  height: 24px;
}

.c16 {
  text-align: center;
  color: var(--ac-widget-composer-disclaimer-color,#666666);
  font-size: var(--ac-widget-composer-disclaimer-fontsize,12px);
  margin: 0 16px 8px;
}

@media (max-width:360px) {
  .c1 {
    padding: var(--ac-widget-disclaimer-padding-small,12px);
  }
}

@media (max-width:360px) {
  .c8 {
    margin: var(--ac-widget-composer-margin-small,8px 10px 10px);
  }
}

<body>
    <div>
      <div
        class="c0 composer"
      >
        <div
          class="c1"
          data-testid="customer-chat-disclaimer"
        >
          <div
            class="c2"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="20"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 0.833344L2.5 4.16668V9.16668C2.5 13.7917 5.7 18.1167 10 19.1667C14.3 18.1167 17.5 13.7917 17.5 9.16668V4.16668L10 0.833344ZM15.8333 9.16668C15.8333 10.7083 15.4083 12.2083 14.6833 13.5083L13.475 12.3C14.55 10.6833 14.3667 8.48334 12.9417 7.05834C11.3167 5.43334 8.675 5.43334 7.05 7.05834C5.425 8.68334 5.425 11.325 7.05 12.95C8.475 14.375 10.675 14.55 12.2917 13.4833L13.725 14.9167C12.7333 16.1 11.45 17.0083 10 17.45C6.65 16.4083 4.16667 12.9333 4.16667 9.16668V5.25001L10 2.65834L15.8333 5.25001V9.16668ZM10 12.5C8.61667 12.5 7.5 11.3833 7.5 10C7.5 8.61668 8.61667 7.50001 10 7.50001C11.3833 7.50001 12.5 8.61668 12.5 10C12.5 11.3833 11.3833 12.5 10 12.5Z"
                fill="#595959"
              />
            </svg>
          </div>
          <div
            class="c3"
          >
            <button
              aria-expanded="true"
              class="c4"
              data-testid="customer-chat-disclaimer-toggle"
              type="button"
            >
              Show less
              <svg
                aria-hidden="true"
                class="c5"
                viewBox="0 0 12 8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 0L0 6L1.41 7.41L6 2.83L10.59 7.41L12 6L6 0Z"
                />
              </svg>
            </button>
            <p
              class="c6"
            >
              This chat may be recorded and shared with our service providers to support your experience. By sending a message, you agree to our 
              <a
                class="c7"
              >
                Privacy Policy
              </a>
               and 
              <a
                class="c7"
              >
                Terms of Use
              </a>
              .
            </p>
          </div>
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <textarea
              aria-label="Type a message"
              class="c10"
              data-testid="customer-chat-text-input"
              maxlength="200"
              placeholder="Type a message"
              spellcheck="true"
              tabindex="0"
            />
            <div
              class="c11"
            >
              <div
                class="c12"
                data-testid="customer-chat-attachment-icon"
                tabindex="0"
              >
                <button
                  aria-label="Attach a file"
                  class="c13"
                >
                  <label
                    for="customer-chat-file-select-12344"
                  >
                    <div
                      class="c14"
                    >
                      <svg
                        fill="none"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          height="14"
                          rx="2.5"
                          stroke="currentColor"
                          stroke-width="1.4"
                          width="16"
                          x="2"
                          y="4"
                        />
                        <circle
                          cx="7"
                          cy="9"
                          fill="currentColor"
                          r="1.3"
                        />
                        <path
                          d="M3.5 15.5 8 11l2.5 2.5L15 9l3.5 5v1a1 1 0 0 1-1 1H4.5a1 1 0 0 1-1-1v-.5Z"
                          fill="currentColor"
                        />
                        <circle
                          cx="18.5"
                          cy="17.5"
                          fill="var(--ac-widget-composer-attach-badge-bg, #232F3E)"
                          r="4.5"
                        />
                        <path
                          d="M18.5 15.7v3.6M16.7 17.5h3.6"
                          stroke="white"
                          stroke-linecap="round"
                          stroke-width="1.4"
                        />
                      </svg>
                    </div>
                    <input
                      accept="text/plain,application/pdf,image/jpeg,image/png,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,text/csv,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,audio/wav,audio/x-wav,audio/vnd.wave,image/jpeg,application/rtf,application/x-rtf,image/heic,video/quicktime,video/mp4,text/richtext,text/rtf,.doc,.docx,.xls,.xlsx,.ppt,.pptx,.txt,.csv,.jfif,.rtf,.heic,.mov,.mp4"
                      aria-label="Attach a file"
                      data-testid="customer-chat-file-select"
                      id="customer-chat-file-select-12344"
                      multiple=""
                      tabindex="-1"
                      type="file"
                    />
                  </label>
                </button>
              </div>
              <div
                aria-label="Send Message"
                class="c15"
                data-testid="customer-chat-send-message-button"
                tabindex="0"
              >
                <svg
                  height="24px"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M4.01 6.03L11.52 9.25L4 8.25L4.01 6.03ZM11.51 14.75L4 17.97V15.75L11.51 14.75ZM2.01 3L2 10L17 12L2 14L2.01 21L23 12L2.01 3Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c16"
        >
          Virtual Assistant is AI and can make mistakes.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-kkGfuU hRQtAN composer"
    >
      <div
        class="sc-bwzfXH hHbIBn"
        data-testid="customer-chat-disclaimer"
      >
        <div
          class="sc-htpNat fsafFp"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 0.833344L2.5 4.16668V9.16668C2.5 13.7917 5.7 18.1167 10 19.1667C14.3 18.1167 17.5 13.7917 17.5 9.16668V4.16668L10 0.833344ZM15.8333 9.16668C15.8333 10.7083 15.4083 12.2083 14.6833 13.5083L13.475 12.3C14.55 10.6833 14.3667 8.48334 12.9417 7.05834C11.3167 5.43334 8.675 5.43334 7.05 7.05834C5.425 8.68334 5.425 11.325 7.05 12.95C8.475 14.375 10.675 14.55 12.2917 13.4833L13.725 14.9167C12.7333 16.1 11.45 17.0083 10 17.45C6.65 16.4083 4.16667 12.9333 4.16667 9.16668V5.25001L10 2.65834L15.8333 5.25001V9.16668ZM10 12.5C8.61667 12.5 7.5 11.3833 7.5 10C7.5 8.61668 8.61667 7.50001 10 7.50001C11.3833 7.50001 12.5 8.61668 12.5 10C12.5 11.3833 11.3833 12.5 10 12.5Z"
              fill="#595959"
            />
          </svg>
        </div>
        <div
          class="sc-bxivhb gbzHpS"
        >
          <button
            aria-expanded="true"
            class="sc-gzVnrw dcwcOS"
            data-testid="customer-chat-disclaimer-toggle"
            type="button"
          >
            Show less
            <svg
              aria-hidden="true"
              class="sc-htoDjs bKoRnx"
              viewBox="0 0 12 8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 0L0 6L1.41 7.41L6 2.83L10.59 7.41L12 6L6 0Z"
              />
            </svg>
          </button>
          <p
            class="sc-EHOje gzPryD"
          >
            This chat may be recorded and shared with our service providers to support your experience. By sending a message, you agree to our 
            <a
              class="sc-bZQynM ftJhAn"
            >
              Privacy Policy
            </a>
             and 
            <a
              class="sc-bZQynM ftJhAn"
            >
              Terms of Use
            </a>
            .
          </p>
        </div>
      </div>
      <div
        class="sc-iAyFgw dAlhdE"
      >
        <div
          class="sc-hSdWYo golqQu"
        >
          <textarea
            aria-label="Type a message"
            class="sc-cMljjf fQLzEC"
            data-testid="customer-chat-text-input"
            maxlength="200"
            placeholder="Type a message"
            spellcheck="true"
            tabindex="0"
          />
          <div
            class="sc-eHgmQL gZbIKa"
          >
            <div
              class="sc-cvbbAY icApEO"
              data-testid="customer-chat-attachment-icon"
              tabindex="0"
            >
              <button
                aria-label="Attach a file"
                class="sc-jWBwVP kaGVxr"
              >
                <label
                  for="customer-chat-file-select-12344"
                >
                  <div
                    class="sc-jAaTju dtpwYi"
                  >
                    <svg
                      fill="none"
                      height="24"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="14"
                        rx="2.5"
                        stroke="currentColor"
                        stroke-width="1.4"
                        width="16"
                        x="2"
                        y="4"
                      />
                      <circle
                        cx="7"
                        cy="9"
                        fill="currentColor"
                        r="1.3"
                      />
                      <path
                        d="M3.5 15.5 8 11l2.5 2.5L15 9l3.5 5v1a1 1 0 0 1-1 1H4.5a1 1 0 0 1-1-1v-.5Z"
                        fill="currentColor"
                      />
                      <circle
                        cx="18.5"
                        cy="17.5"
                        fill="var(--ac-widget-composer-attach-badge-bg, #232F3E)"
                        r="4.5"
                      />
                      <path
                        d="M18.5 15.7v3.6M16.7 17.5h3.6"
                        stroke="white"
                        stroke-linecap="round"
                        stroke-width="1.4"
                      />
                    </svg>
                  </div>
                  <input
                    accept="text/plain,application/pdf,image/jpeg,image/png,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,text/csv,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,audio/wav,audio/x-wav,audio/vnd.wave,image/jpeg,application/rtf,application/x-rtf,image/heic,video/quicktime,video/mp4,text/richtext,text/rtf,.doc,.docx,.xls,.xlsx,.ppt,.pptx,.txt,.csv,.jfif,.rtf,.heic,.mov,.mp4"
                    aria-label="Attach a file"
                    data-testid="customer-chat-file-select"
                    id="customer-chat-file-select-12344"
                    multiple=""
                    tabindex="-1"
                    type="file"
                  />
                </label>
              </button>
            </div>
            <div
              aria-label="Send Message"
              class="sc-bdVaJa iOYBrR"
              data-testid="customer-chat-send-message-button"
              tabindex="0"
            >
              <svg
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M4.01 6.03L11.52 9.25L4 8.25L4.01 6.03ZM11.51 14.75L4 17.97V15.75L11.51 14.75ZM2.01 3L2 10L17 12L2 14L2.01 21L23 12L2.01 3Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-hzDkRC DBcwP"
      >
        Virtual Assistant is AI and can make mistakes.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
